--- a/src/assets/card.css
+++ b/src/assets/card.css
@@ -1,10 +1,10 @@
-#card_number{
+#card_number {
     font-family: "Roboto Mono";
     font-weight: bold;
     letter-spacing: 5px;
 }
 
-#card_info{
+#card_info {
     box-shadow: #ddd 1px 1px 25px;
     background-color: #fff;
     padding: 25px;
@@ -14,7 +14,7 @@
     flex-direction: column;
 }
 
-#chip_img{
+#chip_img {
     filter: contrast(.05) brightness(1.2);
     background-color: lightgrey;
     height: 50px;
@@ -27,12 +27,12 @@
     -webkit-filter: contrast(.05) brightness(1.2);
 }
 
-#card{
+#card {
     box-shadow: #999 2px 3px 15px;
     color: white;
     text-shadow: #111 2px 3px 15px;
     border-radius: 20px;
-    background: linear-gradient(90deg, rgba(134,59,238,1) 0%, rgba(75,186,209,1) 100%);
+    background: linear-gradient(90deg, rgba(134, 59, 238, 1) 0%, rgba(75, 186, 209, 1) 100%);
     width: 75%;
     display: flex;
     flex-direction: column;
@@ -50,63 +50,116 @@
     margin: 35px 0;
 }
 
-#card_bottom{
+#card_bottom {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-#card_bottom_left{
+#card_bottom_left {
     align-items: start;
 }
 
-#card_bottom_right{
+#card_bottom_right {
     align-items: end;
 }
 
-#card_info_input, #card_info_expiration_date, #cvc, #card_bottom_left, #card_bottom_right {
+#card_info_input,
+#card_info_expiration_date,
+#cvc,
+#card_bottom_left,
+#card_bottom_right {
     display: flex;
     flex-direction: column;
 }
 
-#card_info_bottom{
+#card_info_bottom {
     display: flex;
 }
 
-#cvc, #card_info_expiration_date {
+#cvc,
+#card_info_expiration_date {
     justify-content: space-between;
 }
 
-#cvc > div{
+#cvc>div {
     display: flex;
 }
 
-#card_info_expiration_date{
+#card_info_expiration_date {
     flex: 1 1 66%;
 }
 
-#cvc{
+#cvc {
     flex: 1 1 33%;
 }
 
-#card_info_inputs{
+#card_info_inputs {
     display: flex;
 }
 
-#card_info_inputs > input{
+#card_info_inputs>input {
     display: block;
     flex: 1 1 50%
 }
 
-.card_label{
-    font-size:14px;
+.card_label {
+    font-size: 14px;
 }
 
-.card-info-input-field{
+.card-info-input-field {
     margin-top: 5px;
     margin-bottom: 15px;
     height: 40px;
-    padding:5px;
-    font-size:20px;
+    padding: 5px;
+    font-size: 20px;
     width: 100%;
+    border: 1px grey solid;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.small-input-field {
+    margin: 5px;
+}
+
+#month {
+    margin-left: 0;
+}
+
+#cvc{
+    margin-left: 5px;
+}
+
+#cvc_input {
+    margin-left: 0;
+}
+
+#price_tag{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    width: 95%;
+    height: 40px;
+}
+
+#confirm,
+#confirm>button{
+    width:100%;
+    height: 40px;
+}
+#confirm>button{
+    color: white;
+    background-color: rgba(55, 166, 180, 1);
+    border: none;
+    font-size: 20px;
+    font-family: "Roboto mono";
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
