--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -68,7 +68,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
-    "Roboto Mono",
+    'Roboto Mono',
     Inter,
     -apple-system,
     BlinkMacSystemFont,
